--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,11 +2,11 @@
 
 
 <h1>Home</h1>
-<p> <%= homeContent %></p>
+<p> <%= startingContent %></p>
 
-<% newPostList.forEach(function(post){ %>
+<% posts.forEach(function(post){ %>
   <h1><%= post.title %></h1>
-  <p class="overflow"><%= post.textBody %> <a href="/posts/<%= post.title %>">Read More..</a></p>
+  <p class="overflow"><%= post.content%> <a href="/posts/<%= post.title %>">Read More..</a></p>
 
 
   <% }); %>
