--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,7 +6,9 @@
 
 <% posts.forEach(function(post){ %>
   <h1><%= post.title %></h1>
-  <p class="overflow"><%= post.content%> <a href="/posts/<%= post.title %>">Read More..</a></p>
+  <p><%= post.content.substring(0,100) + " ..."%>
+  <a href="/posts/<%= post._id %>">Read More</a>
+  </p>
 
 
   <% }); %>
