--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,6 @@
 <%- include("partials/header") -%>
 
-<h1><%= matchedTitle %></h1>
-<p><%= matchedBody %></p>
+<h1><%= title %></h1>
+<p><%= content %></p>
 
 <%- include("partials/footer") -%>
