--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 </div>
 <div class="footer-padding"></div>
   <div class="footer">
-    <p>Made by The App Brewery & BRiNK</p>
+    <p>© BRiNK's Coding Adventures 2021</p>
   </div>
 </div>
 </body>
